--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,22 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../fonts/fontawesome-webfont.eot?v=4.4.0');
+  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.4.0') format('embedded-opentype'),
+  	   url('../fonts/fontawesome-webfont.woff2?v=4.4.0') format('woff2'),
+  	   url('../fonts/fontawesome-webfont.woff?v=4.4.0') format('woff'),
+  	   url('../fonts/fontawesome-webfont.ttf?v=4.4.0') format('truetype'),
+  	   url('../fonts/fontawesome-webfont.svg?v=4.4.0#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+	font-family: 'Lato', Calibri, Arial, sans-serif;
+    color: #47A3DA;
+}
+
 a,
 input[type="submit"],
 input[type="button"],
@@ -6,3 +25,79 @@ button{
 	-moz-transition: color .3s ease-in, border-color .3s ease-in, background-color .3s ease-in, opacity .3s ease-in;
 	transition: color .3s ease-in, border-color .3s ease-in, background-color .3s ease-in, opacity .3s ease-in;
 }
+
+h2 { font-size: 32px; }
+
+h3 { font-size: 24px; }
+
+.wrapper {
+	margin: 76px auto;
+	padding: 20px;
+	width: 90%;
+	border: 3px solid #47A3DA;
+	max-width: 1044px;
+}
+
+.title {
+	border-bottom: 3px solid #47A3DA;
+	margin: 0;
+	padding-bottom: 20px;
+}
+
+.ba-drink {
+	text-align: center;
+	margin: 45px 0 25px;
+}
+
+.ba-drink__link:hover ~ .ba-drink__btn-add {
+	background: #02639D;
+}
+
+.ba-drink__title {
+	margin: 0;
+}
+
+.ba-drink__price {
+	color: #C0C0C0;
+	margin: 10px 0;
+	font-size: 24px;
+}
+
+.ba-drink__text {
+	min-height: 70px;
+	margin: 0;
+	padding: 0px 25px;
+}
+
+.ba-drink__btn-add {
+	display: inline-block;
+    color: #FFF;
+    background: #47A3DA;
+    padding: 10px 20px;
+    border-radius: 2px;
+    margin: 20px 0 0;
+    text-decoration: none;
+}
+
+.ba-drink__btn-add:hover {
+	background: #02639D;
+}
+
+.ba-drink__btn-add:before {
+	content: "\f055";
+	font-family: 'fontawesome';
+	margin-right: 5px;
+}
+
+@media screen and (max-width: 900px) {
+	.ba-drink {
+		width: 50%;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.ba-drink {
+		width: 100%;
+	}
+}
+
