--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-
-@font-face {
-  font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot?v=4.4.0');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.4.0') format('embedded-opentype'),
-  	   url('../fonts/fontawesome-webfont.woff2?v=4.4.0') format('woff2'),
-  	   url('../fonts/fontawesome-webfont.woff?v=4.4.0') format('woff'),
-  	   url('../fonts/fontawesome-webfont.ttf?v=4.4.0') format('truetype'),
-  	   url('../fonts/fontawesome-webfont.svg?v=4.4.0#fontawesomeregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 
 body {
 	font-family: 'Lato', Calibri, Arial, sans-serif;
@@ -84,9 +72,22 @@ h3 { font-size: 24px; }
 }
 
 .ba-drink__btn-add:before {
-	content: "\f055";
-	font-family: 'fontawesome';
+	display: inline-block;
+	content: "+";
+	-webkit-border-radius: 50px;
+	        border-radius: 50px;
+	background: #FFF;
+	color: #47A3DA;
+	font-weight: bold;
 	margin-right: 5px;
+	width: 20px;
+	height: 20px;
+	line-height: 20px;
+	font-size: 19px;
+}
+
+.ba-drink__btn-add:hover:before {
+	color: #02639D;
 }
 
 @media screen and (max-width: 900px) {
